# task-do

./: .gitignore  Cargo.toml  Makefile  Rocket.toml  diesel.toml  docker-compose.yml
migrations/2024-08-09-232657_create_users/: up.sql
migrations/2024-08-11-153528_create_tasks/: down.sql  up.sql
src/: main.rs  schema.rs
src/tasks/: mod.rs  repository.rs  routes.rs  service.rs
src/tasks/models/: tasks.rs
src/user/: repository.rs  routes.rs  service.rs
src/user/models/: user.rs
src/utils/: guard.rs
