[package]
name = "task-do"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
rocket_contrib = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15.0"
dotenvy = "0.15.0"
diesel = { version = "2.2.2", features = ["postgres", "r2d2"] }
jsonwebtoken = "9.3.0"
